--- a/data/requirements.txt
+++ b/data/requirements.txt
@@ -1,8 +1,6 @@
-# requirements.txt
 streamlit==1.32.0
 pandas==2.1.4
 numpy==1.26.2
 scipy==1.11.4
-tensorflow==2.15.0
+tensorflow-cpu==2.15.0
 google-cloud-firestore==2.11.1
-pyngrok==7.0.0
